# my-notion-telegram-bot

./: README.md  main.py  pyproject.toml
my_notion_telegram_bot/: __init__.py  main.py  notion.py  telegram.py  utils.py
